<resources>
    <string name="app_name">BookPublishingProject</string>

    <string name="pubId_textView_label">Pub Id</string>
    <string name="pubId_textView_value"></string>
    <string name="pubName_textView_label">Pub Name</string>
    <string name="pubName_textView_value"></string>
    <string name="pubAdd_textView_label">Pub Add</string>
    <string name="pubAdd_textView_value"></string>
    <string name="prevPub_button">Prev Pub</string>
    <string name="nextPub_button">Next Pub</string>
    <string name="pubDetails_button">Publisher Details</string>
    <string name="showBook_button">Show Book</string>

    <string name="pubId_editText"></string>
    <string name="pubName_editText"></string>
    <string name="pubAdd_editText"></string>
    <string name="updatePub_button">Update Publisher</string>
    <string name="clearPub_button">Clear Publisher</string>
    <string name="addPub_button">Add Publisher</string>
    <string name="searchPub_button">Search Publisher</string>
    <string name="deletePub_button">Delete Publisher</string>

</resources>