<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/pubId_textView_label"
        android:layout_width="147dp"
        android:layout_height="51dp"
        android:layout_marginStart="50dp"
        android:text="@string/pubId_textView_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.122" />

    <TextView
        android:id="@+id/pubId_textView_value"
        android:layout_width="147dp"
        android:layout_height="51dp"
        android:layout_marginEnd="50dp"
        android:text="@string/pubId_textView_value"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintStart_toEndOf="@+id/pubId_textView_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.122" />


    <TextView
        android:id="@+id/pubName_textView_label"
        android:layout_width="147dp"
        android:layout_height="51dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:text="@string/pubName_textView_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pubId_textView_label" />

    <TextView
        android:id="@+id/pubName_textView_value"
        android:layout_width="147dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:text="@string/pubName_textView_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toEndOf="@+id/pubName_textView_label"
        app:layout_constraintTop_toBottomOf="@+id/pubId_textView_value" />

    <TextView
        android:id="@+id/pubAdd_textView_label"
        android:layout_width="147dp"
        android:layout_height="51dp"
        android:layout_marginStart="50dp"
        android:text="@string/pubAdd_textView_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pubName_textView_label"
        app:layout_constraintVertical_bias="0.035" />

    <TextView
        android:id="@+id/pubAdd_textView_value"
        android:layout_width="147dp"
        android:layout_height="51dp"
        android:layout_marginEnd="50dp"
        android:text="@string/pubAdd_textView_value"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toEndOf="@+id/pubAdd_textView_label"
        app:layout_constraintTop_toBottomOf="@+id/pubName_textView_value"
        app:layout_constraintVertical_bias="0.035" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pubAdd_textView_value"
        app:layout_constraintVertical_bias="0.14"
        tools:layout_editor_absoluteX="16dp">

        <Button
            android:id="@+id/prevPub_button"
            android:layout_width="142dp"
            android:layout_height="62dp"
            android:text="@string/prevPub_button" />

        <Button
            android:id="@+id/nextPub_button"
            android:layout_width="142dp"
            android:layout_height="62dp"
            android:text="@string/nextPub_button" />

    </LinearLayout>

    <Button
        android:id="@+id/pubDetails_button"
        android:layout_width="284dp"
        android:layout_height="62dp"
        android:layout_marginTop="16dp"
        android:text="@string/pubDetails_button"
        app:layout_constraintBottom_toTopOf="@+id/showBook_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.734" />

    <Button
        android:id="@+id/showBook_button"
        android:layout_width="284dp"
        android:layout_height="62dp"
        android:layout_marginBottom="156dp"
        android:text="@string/showBook_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>